--- a/client/src/Components/LoginForm/style.css
+++ b/client/src/Components/LoginForm/style.css
@@ -10,6 +10,7 @@
     border:1px solid rgb(176, 176, 176);
     margin-bottom: 5%;
     box-sizing: border-box;
+    gap: 10px;
 }
 .form-container img{
     scale: 1.2;
