Client <> Finished RegisterationForm Component

--- a/client/src/Components/Button/style.css
+++ b/client/src/Components/Button/style.css
@@ -1,6 +1,6 @@
 button{
     margin-top: 2%;
-    background-color:#4cb5f9;
+    background-color:#1aa3ff;
     outline:none;
     border: none;
     border-radius: 10px;
