--- a/client/src/Components/LoginForm/style.css
+++ b/client/src/Components/LoginForm/style.css
@@ -1,4 +1,4 @@
-.form-container{
+.login-form-container{
     margin-top: 1%;
     margin-left: auto;
     margin-right: auto;
@@ -12,11 +12,12 @@
     box-sizing: border-box;
     gap: 10px;
 }
-.form-container img{
-    scale: 1.2;
-    width: 200px;
-    max-width: 50%;
-    max-height: 40%;
+.login-form-container img{
+    padding-top: 20px;
+    max-width: 100%;
+    max-height:100%;
+    scale: 4;
+    margin-bottom: 15%;
 }
 .existing-container{
     margin-top: 0;
